# ClassicIndex

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: main.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose-local.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf.template
frontend/: .env.example  app.py  next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/search/: route.ts
frontend/src/components/: result-card.tsx  search-app.tsx
frontend/src/lib/: api.ts
scripts/: import_data.py
