[project]
name = "classic_index"
version = "0.1.0"
description = "语义搜索应用 - 在经典著作中查找最匹配的段落"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "pymilvus>=2.3.0",
    "openai>=1.12.0",           # 用于调用 Qwen API (兼容 OpenAI 格式)
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tqdm>=4.66.0",
]

[project.scripts]
import-data = "scripts.import_data:main"
